[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/scenes/SketchStatusControl/SketchStatusControl.gd" type="Script" id=1]

[node name="SketchStatusControl" type="PanelContainer"]
margin_right = 347.0
margin_bottom = 42.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 88.0
margin_bottom = 35.0
size_flags_horizontal = 0
custom_constants/separation = 0

[node name="SketchName" type="Label" parent="VBox"]
margin_right = 81.0
margin_bottom = 14.0
size_flags_vertical = 3
text = "testino.ino"
valign = 2

[node name="SketchStatus" type="Label" parent="VBox"]
margin_top = 14.0
margin_right = 81.0
margin_bottom = 28.0
size_flags_vertical = 3
text = "Compiled"

[node name="HBox" type="HBoxContainer" parent="."]
margin_left = 223.0
margin_top = 7.0
margin_right = 340.0
margin_bottom = 35.0
size_flags_horizontal = 8

[node name="CompileButton" type="Button" parent="HBox"]
margin_right = 74.0
margin_bottom = 28.0
text = "Compile"

[node name="LogButton" type="Button" parent="HBox"]
margin_left = 78.0
margin_right = 117.0
margin_bottom = 28.0
text = "Log"
